# Alert.Ai

./: .env  .gitattributes  .gitignore  DATABASE_INITIALIZATION_FIX.md  DUPLICATE_EMERGENCY_FIX.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  build.sh  combined_server.py  configure_ngrok.py  create-repo-guide.md  debug_server_env.py  demo_all_emergency_types.py  demo_whatsapp_message.py  fire_detection_integration.py  git-lfs-setup.md  launch_terminal_agent.py  nixpacks.toml  push-to-repo.md  pyproject.toml  railway.json  requirements.txt  send_blood_emergency.py  send_fallen_person_emergency.py  send_fire_emergency.py  send_gun_emergency.py  send_smoke_emergency.py  setup.py  setup_yolo_integration.py  yolo_fire_detection.py  yolo_requirements.txt
alertai-agent/: .env  README.md  blood_emergency_agent.py  config.py  fallen_person_agent.py  fire_emergency_agent.py  gun_emergency_agent.py  requirements.txt  run_agent.py  smart_gemini_agent.py  smoke_emergency_agent.py
alertai-webapp/: GUIDANCE_README.md  README.md  alertai.html  app.js  config.js  guidance.css  guidance.html  guidance.js  index.html  serve_webapp.py  styles.css  test_cpr_safari_fix.html  test_cpr_simple_debug.html  test_guidance.html
cpr/: README.md  cpr-monitor.js  index.html  setup.bat
cpr-posenet-monitor/: cpr-monitor.js  index.html  package.json
db/: database.db
fire_dataset/: best.pt  emergency_log.json
server/: .env  .env.example  README.md  api_endpoints.py  app.py  config.py  requirements.txt
server/db/: database.db
server/utils/: db_utils.py  gemini_verification_local.py  users.py  (+2 more)
